Adicao botao Validar Senhas

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
         if(senha1.value == senha2.value){
         }
         else{
-          alert("Senhas Imcompatíveis!")
+          alert("Senhas Incompatíveis!")
         }
       }
-
+git
       function setFundo(cor){
         document.getElementById("texto_corfundo").innerHTML=cor;
         //document.getElementById("texto_corfundo").style.color=cor;
